--- a/autonomy_core/control/control_launch/config/tracker_params_mp.yaml
+++ b/autonomy_core/control/control_launch/config/tracker_params_mp.yaml
@@ -19,39 +19,43 @@ trajectory_tracker:
 
 trajectory_planner:
   debug: false # debug mode, default false
-  verbose: false # verbose mode, default false
+  verbose: true # verbose mode, default false
   max_v: 3.0 # x-y-direction maximum velocity,recommended value: for 2-D 9, for 3-D 3
-  max_a: 4.0 # x-y-direction maximum acceleration, recommended value: for 2-D 7, for 3-D 2
+  max_a: 2.0 # x-y-direction maximum acceleration, recommended value: for 2-D 7, for 3-D 2
   max_j: 2.0 # x-y-direction maximum jerk, recommended value: for 2-D 3, for 3-D 2
   max_u: 2.0 # x-y-direction control inputs increase / decrease step, must be smaller than max_j, recommended value: for 2-D 3, for 3-D 1, for each axis jerk increment choice is -max_u, 0, max_u
   use_3d_local: true # local planner operates in 3D (true) or 2D (false)
   search_planner_text: ["MPL", "dispersion planner", "JPS (geometric)", "pass through from global planner", "RRT", "SST"]
   search_planner_type: 0 # 0: MPL, 1: dispersion planner, 2: JPS (geometric) 3: pass through from global planner 4: RRT 5 :SST
   #is being overwriten in the launch file
-  opt_planner_type: 1 # -1: no planner 0: Double Description 1: gcopter 2: iLQR(Altro)
-  opt_planner_text: ["Double Description", "gcopter", "iLQR(Altro)"]
+  opt_planner_text: ["Double Description", "gcopter", "iLQR(Altro)", "None"] #this trick make when no opt planner, the text says none
+  opt_planner_type: 2 # -1: no planner(BROKEN) 0: Double Description 1: gcopter 2: iLQR(Altro) 
   use_discrete_traj: false # set true to use with ilqr, still a lot of tracking er
-  use_tracker_client: true # if we wait for tracker to finish before sending next command
+  use_tracker_client: false # if we wait for tracker to finish before sending next command
   # if we do not care about tracking error and want things to run fast, set this to false
   #TODO(Laura) fix path
-  dispersion/graph_file: "/home/wyw/Code/yifei_ws/500.json" # /home/wyw/Code/yifei_ws    /home/yifei/Documents/optimal_ctrl/
+  dispersion/graph_file: "/home/yifei/Documents/optimal_ctrl/500.json" # /home/wyw/Code/yifei_ws    /home/yifei/Documents/optimal_ctrl/
 
   use_3d_global: false # global planner operates in 3D (true, in this case use_3d_local has to be set as true) or 2D (false)
   z_cost_factor: 1 # global map z cost factor, this also influences the vertical semi field of view of global planner into 45-degree / z_cost_factor  (cost_along_z = z_cost_factor * cost_along_x_or_y)
   # TODO: Z factor not working, has a bug, set value to 1 always!
 
   max_v_z: 1.5 # z-direction maximum velocity, recommended value: 1.5
-  max_a_z: 3.0 # z-direction maximum acceleration, recommended value: 3.0
-  max_j_z: 3.0 # z-direction maximum jerk, recommended value: 3.0
+  max_a_z: 2.0 # z-direction maximum acceleration, recommended value: 3.0
+  max_j_z: 2.0 # z-direction maximum jerk, recommended value: 3.0
   max_u_z: 1.0 # z-direction control inputs increase / decrease step, must be smaller than max_j, recommended value: 3.0
+  
   tol_pos: 1.0 # tolerance of distance for goal region, 0 means no tolerance, -1 means no limitation, recommended value: 3.0 for 2-D and 5.0 for 3-D
   global_goal_tol_vel: 3.0 # tolerance of velocity for goal region, recommended value: 2.0 for 2-D and 3.0 for 3-D
+  #not used if check_vel is false
   global_goal_tol_acc: -1 # tolerance of acceleration for goal region, recommended value: -1
+  #not used if check_vel is false
   dt: 1.0 # execution time for each primitive, recommended value: 1.0
-  ndt: 1.0 # default 1
-  max_num: -1 # maxmum number of expansion, -1 means no limitation
-  heuristic_weight: 50.0 # the larger heuristic_weight, the more emphasis on min time and the less emphasis on min control effort, recommended value: 50 for 2-D, 300 for 3-D
+  ndt: 1.0 # default 1 #not used it seems? (Yifei)
+  max_num: 20000 # maxmum number of expansion, -1 means no limitation #Yifei: Hopefully 20 mean 20s here
+  heuristic_weight: 300.0 # the larger heuristic_weight, the more emphasis on min time and the less emphasis on min control effort, recommended value: 50 for 2-D, 300 for 3-D
   vertical_semi_fov: 0.61 # vertical semi field of view (in rad), used for 3D planning only, value should lie in (0, pi/2), if 2D planning set it as 0
+  
   optimization/bb_xy_size: 5.0 # xy half size of the intial polytope of flight corridor
   optimization/bb_z_up: 2.0 # z up size of the intial polytope of flight corridor
   optimization/bb_z_down: 1.5 # z down size of the intial polytope of flight corridor
@@ -59,6 +63,7 @@ trajectory_planner:
   optimization/w_vel: 360.0 # penalty weight to minimize the the violate velocity (100 ~ 1000)
   optimization/w_acc: 360.0 # penalty weight to minimize the the violate accelrate (100 ~ 1000)
   optimization/w_sta_obs: 20.0 # penalty weight to enforce the position inside flight corridor (100 ~ 1000)
+  
   search/max_tau: 0.6 # time interval for kinodynamic search
   search/init_max_tau: 0.6 # time interval for kinodynamic search (usually don't change it)
   search/horizon: 13.0 # local search horizon
