added changemap service, saving result line by line for post process

--- a/autonomy_core/map_plan/action_planner/CMakeLists.txt
+++ b/autonomy_core/map_plan/action_planner/CMakeLists.txt
@@ -29,6 +29,7 @@ find_package(
              motion_primitives
              gcopter
              kr_tracker_msgs
+             param_env_msgs
             )
 
 generate_dynamic_reconfigure_options(cfg/ActionPlanner.cfg)
