--- a/autonomy_core/map_plan/action_planner/package.xml
+++ b/autonomy_core/map_plan/action_planner/package.xml
@@ -37,6 +37,7 @@
   <depend>gcopter</depend>
   <depend>kr_ilqr_optimizer</depend>
   <depend>kr_trackers_msgs</depend>
+  <depend>param_env_msgs</depend>
 
   <export>
   </export>
