--- a/autonomy_core/client/rqt_quadrotor_safety/package.xml
+++ b/autonomy_core/client/rqt_quadrotor_safety/package.xml
@@ -16,7 +16,7 @@
   <run_depend>geometry_msgs</run_depend>
   <run_depend>kr_planning_msgs</run_depend>
   <run_depend>mavros_msgs</run_depend>
-  <run_depend>python-rospkg</run_depend>
+  <run_depend>python3-rospkg</run_depend>
   <run_depend>rostopic</run_depend>
   <run_depend>rqt_gui</run_depend>
   <run_depend>rqt_gui_py</run_depend>
