slight change readme

--- a/autonomy_core/control/control_launch/config/tracker_params_mp.yaml
+++ b/autonomy_core/control/control_launch/config/tracker_params_mp.yaml
@@ -36,8 +36,8 @@ trajectory_planner:
   path_sampling_dt : 0.05  # should be same as search/time_res
   ilqr_dt: 0.1
 
-  #TODO(Laura) fix path
-  dispersion/graph_file: "/home/wyw/Code/yifei_ws/src/500.json" #/home/wyw/Code/yifei_ws/src/500.json" # /home/wyw/Code/yifei_ws    /home/yifei/Documents/optimal_ctrl/
+  #TODO(Laura) Change to your own path
+  dispersion/graph_file: "/home/yifei/ws_mp_design/src/kr_autonomous_flight/autonomy_core/map_plan/action_planner/data/500.json" 
   
   use_3d_global: false # global planner operates in 3D (true, in this case use_3d_local has to be set as true) or 2D (false)
   z_cost_factor: 1 # global map z cost factor, this also influences the vertical semi field of view of global planner into 45-degree / z_cost_factor  (cost_along_z = z_cost_factor * cost_along_x_or_y)
