--- a/autonomy_core/control/control_launch/config/tracker_params_mp.yaml
+++ b/autonomy_core/control/control_launch/config/tracker_params_mp.yaml
@@ -21,15 +21,15 @@ trajectory_planner:
   debug: false # debug mode, default false
   verbose: true # verbose mode, default false
   max_v: 3.0 # x-y-direction maximum velocity,recommended value: for 2-D 9, for 3-D 3
-  max_a: 2.0 # x-y-direction maximum acceleration, recommended value: for 2-D 7, for 3-D 2
+  max_a: 4.0 # x-y-direction maximum acceleration, recommended value: for 2-D 7, for 3-D 2
   max_j: 2.0 # x-y-direction maximum jerk, recommended value: for 2-D 3, for 3-D 2
   max_u: 2.0 # x-y-direction control inputs increase / decrease step, must be smaller than max_j, recommended value: for 2-D 3, for 3-D 1, for each axis jerk increment choice is -max_u, 0, max_u
   use_3d_local: true # local planner operates in 3D (true) or 2D (false)
   search_planner_text: ["MPL", "dispersion planner", "JPS (geometric)", "pass through from global planner", "RRT", "SST"]
-  search_planner_type: 0 # 0: MPL, 1: dispersion planner, 2: JPS (geometric) 3: pass through from global planner 4: RRT 5 :SST
+  search_planner_type: 3 # 0: MPL, 1: dispersion planner, 2: JPS (geometric) 3: pass through from global planner 4: RRT 5 :SST
   #is being overwriten in the launch file
   opt_planner_text: ["Double Description", "gcopter", "iLQR(Altro)", "None"] #this trick make when no opt planner, the text says none
-  opt_planner_type: 2 # -1: no planner(BROKEN) 0: Double Description 1: gcopter 2: iLQR(Altro) 
+  opt_planner_type: 1 # -1: no planner(BROKEN) 0: Double Description 1: gcopter 2: iLQR(Altro) 
   use_discrete_traj: false # set true to use with ilqr, still a lot of tracking er
   use_tracker_client: false # if we wait for tracker to finish before sending next command
   # if we do not care about tracking error and want things to run fast, set this to false
@@ -48,14 +48,14 @@ trajectory_planner:
   max_j_z: 2.0 # z-direction maximum jerk, recommended value: 3.0
   max_u_z: 1.0 # z-direction control inputs increase / decrease step, must be smaller than max_j, recommended value: 3.0
   
-  tol_pos: 1.0 # tolerance of distance for goal region, 0 means no tolerance, -1 means no limitation, recommended value: 3.0 for 2-D and 5.0 for 3-D
-  global_goal_tol_vel: 3.0 # tolerance of velocity for goal region, recommended value: 2.0 for 2-D and 3.0 for 3-D
+  tol_pos: 3.0 # tolerance of distance for goal region, 0 means no tolerance, -1 means no limitation, recommended value: 3.0 for 2-D and 5.0 for 3-D
+  global_goal_tol_vel: 2 # tolerance of velocity for goal region, recommended value: 2.0 for 2-D and 3.0 for 3-D
   #not used if check_vel is false
   global_goal_tol_acc: -1 # tolerance of acceleration for goal region, recommended value: -1
   #not used if check_vel is false
   dt: 1.0 # execution time for each primitive, recommended value: 1.0
   ndt: 1.0 # default 1 #not used it seems? (Yifei)
-  max_num: 20000 # maxmum number of expansion, -1 means no limitation #Yifei: Hopefully 20 mean 20s here
+  max_num: -1 # maxmum number of expansion, -1 means no limitation #Yifei: Hopefully 20 mean 20s here
   heuristic_weight: 300.0 # the larger heuristic_weight, the more emphasis on min time and the less emphasis on min control effort, recommended value: 50 for 2-D, 300 for 3-D
   vertical_semi_fov: 0.61 # vertical semi field of view (in rad), used for 3D planning only, value should lie in (0, pi/2), if 2D planning set it as 0
   
@@ -102,18 +102,18 @@ stopping_policy:
 
 local_global_server:
   # local planning horizon will be from robot to the local voxel map boundary
-  waypoint_reach_xy_threshold: 5.0 # x-y distance threshold, within which intermidiate waypoint is regarded as reached
+  waypoint_reach_xy_threshold: 10.0 # x-y distance threshold, within which intermidiate waypoint is regarded as reached
   final_goal_reach_xy_threshold: 5.0 # within which final waypoint is regarded as reached, this should be smaller than waypoint_reach_threshold
-  close_to_final_dist: 5.0 # distance-to-goal threshold, should be larger than final_goal_reach_xy_threshold, within which the velocity and acceleration checking will be turned on, -1 means no velocity checking at all
-  local_plan_timeout_duration: 0.5 # local planner timeout in seconds
+  close_to_final_dist: 10.0 # distance-to-goal threshold, should be larger than final_goal_reach_xy_threshold, within which the velocity and acceleration checking will be turned on, -1 means no velocity checking at all
+  local_plan_timeout_duration: 1.0 # local planner timeout in seconds
   max_local_plan_trials: 1 # should be set as 1 since state machine is now able to try multiple times after planner failures
   max_horizon: 10 # defulat 5, should be larger than local_plan_timeout_duration*max_local_plan_trials*local_replan_rate
-  global_planner_verbose: false # verbose mode, default false
+  global_planner_verbose: true # verbose mode, default false
   odom_frame: "quadrotor/odom" # odometry reference frame
   map_frame: "quadrotor/map" # SLAM reference frame (only for using two-reference-frame system, otherwise this should be set to be the same as odom_frame)
 
 state_machine:
   local_replan_rate: 2.0 # local replan frequency, calling local planner every (1/local_replan_rate) seconds, (float 32)
   global_replan_rate_factor: 3 # global_replan_rate_factor = local replan frequency / global replan frequency, should be an integer and >= 1, (int)
-  max_replan_trials: 100 # max allowed trials to re-enter replanner
+  max_replan_trials: 10 # max allowed trials to re-enter replanner
 
