--- a/autonomy_core/map_plan/map_plan_launch/config/mapper.yaml
+++ b/autonomy_core/map_plan/map_plan_launch/config/mapper.yaml
@@ -3,17 +3,17 @@ robot_h: 0.25 # sim: 0.25 # robot height, local and global maps will be dilated 
 
 # global mapper config
 global:
-  center_x: 0.0 # center of the map in x-axis
-  center_y: 0.0 # center of the map in y-axis
-  range_x: 600.0 # range of the map in x-axis, map will span over [center_x - 0.5*range_x, center_x + 0.5*range_x] (high impact on memory and computation usage, recommended value: 500)
-  range_y: 600.0 # range of the map in y-axis, map will span over [center_y - 0.5*range_y, center_y + 0.5*range_y] (high impact on memory and computation usage, recommended value: 500
-  center_z: 5.0 # center of the map in z-axis, should be similar to the robot take_off_height
+  origin_x: 0.0 # center of the map in x-axis
+  origin_y: 0.0 # center of the map in y-axis
+  range_x: 600.0 # range of the map in x-axis, map will span over [origin_y - 0.5*range_x, origin_y + 0.5*range_x] (high impact on memory and computation usage, recommended value: 500)
+  range_y: 600.0 # range of the map in y-axis, map will span over [origin_y - 0.5*range_y, origin_y + 0.5*range_y] (high impact on memory and computation usage, recommended value: 500
+  origin_z: 5.0 # center of the map in z-axis, should be similar to the robot take_off_height
   range_z: 8.0 # range of the map in z-axis, map will span over [center_z - 0.5*range_z, center_z + 0.5*range_z] (high impact on memory and computation usage, recommended value: 10)
   resolution: 0.5 # resolution of the map (high impact on memory and computation usage, recommended value: 1.0~2.0 for sparse environments, 0.5 for dense environments)
-  num_point_cloud_skip: 1 # the global map update frequency = point cloud frequency / num_point_cloud_skip
-  max_raycast_range: 20.0 # max raycast range, the smaller, the less computation demand, but shorter perception range
+  num_point_cloud_skip: 3 # the global map update frequency = point cloud frequency / num_point_cloud_skip
+  max_raycast_range: 30.0 # max raycast range, the smaller, the less computation demand, but shorter perception range
   dilate_xy: true # dilate global map along x and y axis (recommended value: true)
-  dilate_z: true # dilate global map along z axis (recommended value: false)
+  dilate_z: false # dilate global map along z axis (recommended value: false)
   decay_times_to_empty: 30 # number of times of decay to empty, 0 means no decay, the noisier your state estimator is, the smaller this value should be (when using ground-truth pose, set this as 0)
 
 local: # local map range z and center_z will be the same as storage map
@@ -24,7 +24,7 @@ local: # local map range z and center_z will be the same as storage map
   range_z: 8.0 # range of the map in z-axis (recommended value: slightly larger than global map range z to handle overshoot along z-axis upon stopping policy)
   resolution: 0.25 # resolution of the map (high impact on memory and computation usage, recommended value: 0.5~1.0 for sparse environments, 0.1~0.5 for dense environments)
   max_raycast_range: 25.0 # max raycast range, the smaller, the less computation demand, but shorter perception range
-  decay_times_to_empty: 1 # number of times of decay to empty, 0 means no decay, the noisier your state estimator is, the smaller this value should be (when using ground-truth pose, set this as 0)
+  decay_times_to_empty: 20 # number of times of decay to empty, 0 means no decay, the noisier your state estimator is, the smaller this value should be (when using ground-truth pose, set this as 0)
   # if you are doing evaluation in simulation, set this to 1 so that map will change!
   ignore_offset: false
 
